--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -27,12 +28,6 @@
     "server": "nodemon server.js",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "proxy": "http://localhost:8888",
   "browserslist": {
     "production": [
@@ -45,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.29.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0"
   }
 }
